prevent navbar from covering content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,3 +338,8 @@ a {
     transition: top .3s;
   }
 }
+
+/*=============== Prevent navbar from covering content ===============*/
+body { 
+  padding-top: 65px; 
+}
